# universal_pathlib

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.md  SECURITY.md  environment.yml  mkdocs.yml  noxfile.py  pyproject.toml  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: post-dependabot-update.yml  python.yml  release.yml  tests.yml
dev/: generate_flavours.py  requirements.txt
dev/fsspec_inspector/: generate_flavours.py
docs/: contributing.md  index.md  install.md  migration.md  usage.md  why.md
docs/_plugins/: copy_changelog.py
docs/api/: extensions.md  implementations.md  index.md  registry.md  types.md
docs/concepts/: filesystems.md  fsspec.md  index.md  pathlib.md  upath.md
docs/css/: extra.css
notebooks/: examples.ipynb
typesafety/: test_upath_interface.yml  test_upath_signatures.yml  test_upath_types.yml
upath/: __init__.py  _abc.py  _abc.pyi  _chain.py  _compat.py  _flavour.py  _flavour_sources.py  _fsid.py  _info.py  _parser.py  _protocol.py  _stat.py  _uris.py  core.py  core312plus.py  errors.py  extensions.py  registry.py  universal_path.py
upath/implementations/: _experimental.py  azure.py  cached.py  cloud.py  data.py  ftp.py  gcs.py  github.py  hdfs.py  http.py  local.py  local.pyi  memory.py  s3.py  sftp.py  smb.py  tar.py  webdav.py  zip.py
upath/tests/: cases.py  conftest.py  test_chain.py  test_core.py  test_drive_root_anchor_parts.py  test_extensions.py  test_fsid.py  test_pathlib.py  test_pathlib_backport.py  test_pydantic.py  test_registry.py  test_relative.py  test_stat.py  utils.py
upath/tests/implementations/: test_azure.py  test_cached.py  test_data.py  test_ftp.py  test_gcs.py  test_github.py  test_hdfs.py  test_hf.py  test_http.py  test_local.py  test_memory.py  test_s3.py  test_sftp.py  test_smb.py  test_tar.py  test_webdav.py  test_zip.py
upath/tests/pathlib/: _test_support.py  conftest.py  test_pathlib_310.py  test_pathlib_311.py  test_pathlib_312.py  test_pathlib_38.py  test_pathlib_39.py
upath/types/: __init__.py  _abc.py  _abc.pyi  storage_options.py
