[metadata]
description = pathlib api extended to use fsspec backends
name = universal_pathlib
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files =
    LICENSE
url = https://github.com/fsspec/universal_pathlib
platforms=any
authors = Andrew Fulton
maintainer_email = andrewfulton9@gmail.com
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Development Status :: 4 - Beta

[options]
python_requires = >=3.8
zip_safe = False
packages = find:
install_requires=
    fsspec >=2022.1.0,!=2024.3.1

[options.extras_require]
tests =
    pytest==8.0.0
    pytest-sugar==0.9.7
    pytest-cov==4.1.0
    pytest-mock==3.12.0
    pylint==2.17.4
    mypy==1.9.0
    pytest-mypy-plugins==3.1.2
    packaging
dev =
    %(tests)s
    adlfs
    aiohttp
    requests
    gcsfs
    s3fs
    moto[s3,server]<5
    webdav4[fsspec]
    wsgidav
    cheroot
    # hadoop-test-cluster
    # pyarrow
    pydantic
    pydantic-settings

[options.package_data]
upath =
    py.typed

[options.packages.find]
exclude =
    upath.tests
    upath.tests.*
